swen430as1/tests/valid/ArrayAssign_Valid_7.while
void main() {
    int[] arr1 = [1,2,3];
    int[] arr2 = [3,4,5];
    assert arr1 == [1,2,3];
    assert arr2 == [3,4,5];
    arr1 = arr2; 
    assert arr1 == [3,4,5];       
    assert arr2 == [3,4,5];    
}
