swen430as1/tests/invalid/real/Real_Invalid_07.while
void main() {
    int[] xs = [0,1.0];
}
